# ts-gen

./: .gitignore  AGENTS.md  CONVENTIONS.md  Cargo.toml  justfile
.github/workflows/: ci.yml
crates/ts-gen/: Cargo.toml
crates/wasm-bindgen-tests/: Cargo.toml
crates/wasm-bindgen-tests/tests/: es_module_lexer.rs  node_console.rs  node_path.rs  node_url.rs
examples/cloudflare-worker/: Cargo.toml
integration-tests/: Cargo.toml  build.rs  package-lock.json  package.json
integration-tests/src/: lib.rs
integration-tests/tests/: es_module_lexer.rs  node_console.rs
src/: context.rs  external_map.rs  ir.rs  main.rs
src/codegen/: classes.rs  functions.rs  mod.rs  signatures.rs  subtyping.rs  typemap.rs
src/parse/: classify.rs  docs.rs  literal_union.rs  members.rs  merge.rs  mod.rs  types.rs
src/parse/first_pass/: collect.rs  converters.rs  mod.rs  populate.rs
src/util/: naming.rs
tests/fixtures/: iterables.d.ts  node-console.d.ts
tests/snapshots/: basic.rs  cloudflare-worker.rs  coverage.rs  es-module-lexer.rs  iterables.rs  node-console.rs  phase1.rs  phase2.rs  web-sys-extend.rs  workers-types.rs
