[workspace]
members = [
    "crates/ts-gen",
    "crates/wasm-bindgen-tests",
]
exclude = [
    "examples/cloudflare-worker",
]
resolver = "2"

[workspace.dependencies]
ts-gen = { path = "crates/ts-gen" }

# wasm-bindgen ecosystem — used by crates/wasm-bindgen-tests
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
